[gd_scene load_steps=2 format=3 uid="uid://bhaqixqtubnhv"]

[ext_resource type="Script" uid="uid://b5rbmexp7i3gp" path="res://Screens/music_manager.gd" id="1_6lk10"]

[node name="MusicPlayer" type="Node"]
process_mode = 3
script = ExtResource("1_6lk10")

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"MUSIC"

[node name="sfx" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx2" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx3" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx4" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx5" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx6" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx7" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx8" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx9" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx10" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx11" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx12" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx13" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx14" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx15" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="sfx16" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="finished" from="MusicStreamPlayer" to="." method="_on_music_stream_player_finished"]
